--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,65 @@
+.app-container{
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+nav{
+    margin-bottom: 50px;
+}
 .navbar-toggler{
     border: none;
 }
+
+.card-container{
+    display: flex;
+    flex-flow: row wrap;
+    gap: 20px;
+    padding: 0 30px;
+}
+
+.card{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    width: calc(100% / 4 - (20px / 4 * 3 ));
+    padding: 20px;
+    color: rgb(78, 78, 78);
+    border: none;
+    border-radius: 20px;
+    box-shadow: 4px 4px 50px rgba(120, 120, 120, 0.2);
+    cursor: pointer;
+}
+
+.card-image{
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+}
+
+.card-image img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: top;
+    padding: 10px;
+    border-radius: 30px;
+}
+
+.card-details{
+    display: flex;
+    flex-direction: column;
+    gap: 2px;
+    font-size: 0.8em;
+}
+
+.card-details strong{
+    font-size: 1.1em;
+    padding-right: 10px;
+}
+
+footer a {
+    text-decoration: none;
+}
+
+
