--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 .app-container{
-    max-width: 1200px;
+    max-width: 1600px;
     margin: 0 auto;
 }
 
@@ -14,7 +14,7 @@ nav{
     display: flex;
     flex-flow: row wrap;
     gap: 20px;
-    padding: 0 30px;
+    padding: 0 100px;
 }
 
 .card{
@@ -22,8 +22,8 @@ nav{
     flex-direction: column;
     align-items: center;
     gap: 20px;
-    width: calc(100% / 4 - (20px / 4 * 3 ));
-    padding: 20px;
+    width: calc(100% / 4 - (20px / 4 * 3));
+    padding: 30px 40px;
     color: rgb(78, 78, 78);
     border: none;
     border-radius: 20px;
@@ -32,17 +32,14 @@ nav{
 }
 
 .card-image{
-    width: 200px;
-    height: 200px;
-    object-fit: cover;
+    height: 150px;
 }
 
 .card-image img{
     width: 100%;
     height: 100%;
     object-fit: cover;
-    object-position: top;
-    padding: 10px;
+    object-position: center;
     border-radius: 30px;
 }
 
