--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@ nav{
 }
 
 .card{
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -55,8 +56,32 @@ nav{
     padding-right: 10px;
 }
 
+.fa-solid{
+    font-size: 2em;
+    color: white;
+    padding: 12px;
+    border-radius: 50%;
+}
+
+.category-icon{
+    position: absolute;
+    right: 10px;
+    top: 10px;
+}
+
+.fa-cat{
+    background-color: rgb(220, 0, 0);
+}
+
+.fa-dog{
+    background-color: rgb(1, 108, 1);
+}
+
+
+
 footer a {
     text-decoration: none;
 }
+
 
 
